--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -633,6 +633,11 @@ body {
   padding: 0 1rem;
   text-align: center;
 }
+/* HomePage Progress Components */
+.home-page__progress-wrapper {
+  font-size: 0.8em !important;
+  margin: 0 5%;
+}
 /* Update */
 .home-page__update-box {
   text-align: center;
@@ -1860,7 +1865,6 @@ body {
 /* Wrapper (all components) */
 .progress-component__wrapper {
   position: relative;
-  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
@@ -1891,7 +1895,7 @@ body {
 }
 .progress-bar__bar {
   align-self: center;
-  height: 5rem;
+  height: 5em;
   padding: 0.5rem;
 }
 .progress-bar__bar__inner {
