--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1443,80 +1443,75 @@ body {
   cursor: default;
 }
 .playlist-list-item__head > * {
-  flex: 0 0 auto;
   user-select: none;
 }
-.playlist-list-item__head__icon {
+.playlist-list-item__icon {
+  flex: 0 0 auto;
   width: var(--image-size);
   height: var(--image-size);
 }
-.playlist-list-item__head__icon__image {
+.playlist-list-item__icon-image {
   width: 100%;
   height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
-.playlist-list-item__head__icon__no-image {
+.playlist-list-item__icon-placeholder {
   height: 65%;
 }
-.playlist-list-item__head__icon__no-image__icon {
+.playlist-list-item__icon-placeholder-inner {
   width: 100%;
   height: 100%;
 }
-.playlist-list-item__head__title {
+.playlist-list-item__title {
   flex: 0 1 auto;
   min-width: 0;
   font-weight: bold;
   padding-left: 0.5rem;
 }
-.playlist-list-item__head__divider {
+.playlist-list-item__divider {
+  flex: 0 0 auto;
   padding: 0 0.2rem;
   font-size: 0.9em;
 }
-.playlist-list-item__head__author {
+.playlist-list-item__author {
   flex: 0 1 auto;
   min-width: 0;
   font-size: 0.9em;
   font-style: italic;
 }
-.playlist-list-item__head__author > p {
+.playlist-list-item__author > p {
   padding-right: 0.2em; /* Give it some extra space since its in italics */
 }
-.playlist-list-item__head__title > *,
-.playlist-list-item__head__author > * {
+.playlist-list-item__text-field {
   /* Truncates the overflowing text */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.playlist-list-item--editing .playlist-list-item__head__title input,
-.playlist-list-item--editing .playlist-list-item__head__author input {
-  width: 8rem;
+.playlist-list-item--editing .playlist-list-item__title,
+.playlist-list-item--editing .playlist-list-item__author {
+  flex: 1 1 auto;
 }
-.playlist-list-item--editing .playlist-list-item__head__title,
-.playlist-list-item--editing .playlist-list-item__head__author,
-.playlist-list-item--editing .playlist-list-item__head__icon {
+.playlist-list-item--editing .playlist-list-item__title,
+.playlist-list-item--editing .playlist-list-item__author,
+.playlist-list-item--editing .playlist-list-item__icon {
   cursor: pointer;
 }
 /* Playlist-List-Item Content */
-.playlist-list-item__content {
-  max-height: 0; /* Overridden with JavaScript when expanded. */
+.playlist-list-content {
   overflow: hidden;
-  transition: max-height 0.2s ease-in-out;
 }
-.playlist-list-item--editing .playlist-list-item__content {
-  transition: max-height 0.15s;
-}
-.playlist-list-item__content__inner {
+.playlist-list-content__inner {
   padding: 0.4rem;
 }
-.playlist-list-item__content__edit {
+.playlist-list-content__edit {
   display: flex;
   width: 100%;
   margin-bottom: 0.15rem;
 }
-.playlist-list-item__content__id {
+.playlist-list-content__id {
   display: flex;
   flex: 1 1 auto;
   overflow: hidden;
@@ -1524,39 +1519,32 @@ body {
   opacity: 0.3;
   white-space: pre;
 }
-.playlist-list-item__content__id__pre {
+.playlist-list-content__id-pre {
   flex: 0 0 auto;
   user-select: none;
 }
-.playlist-list-item__content__id__text {
+.playlist-list-content__id-text {
   flex: 1 1 auto;
   overflow: hidden;
 }
-.playlist-list-item__content__id__text p {
+.playlist-list-content__id-text p {
   user-select: text;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.playlist-list-item__content__buttons {
+.playlist-list-content__buttons {
   flex: 0 0 auto;
+  display: flex;
   font-size: 0.85rem;
 }
-.playlist-list-item__content__buttons > * {
+.playlist-list-content__button {
   margin-left: 0.3rem;
 }
-.playlist-list-item__content__description-edit {
+.playlist-list-content__description {
   width: 100%;
   min-height: 5rem;
   resize: vertical;
-}
-.playlist-list-item__content__description-text {
   white-space: pre-wrap;
-}
-.playlist-list-item__editable-text {
-  font-size: inherit;
-  font-family: inherit;
-  font-style: inherit;
-  font-weight: inherit;
 }
 /* Playlist-List-Fake-Item */
 .playlist-list-fake-item {
