refactor: re-implement adding and removing game images
Game images can now be added again (both dialog and drag & drop works).
Game images can now be deleted again.
And some minor stuff...

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1135,7 +1135,7 @@ body {
 .browse-right-sidebar__row__screenshot {
   width: 100%;
 }
-.browse-right-sidebar__row__screenshot img {
+.browse-right-sidebar__row__screenshot-image {
   width: 100%;
   cursor: zoom-in;
 }
@@ -1168,10 +1168,6 @@ body {
 .browse-right-sidebar__row__screenshot__placeholder p {
   font-size: 0.9rem;
   font-style: italic;
-}
-.browse-right-sidebar__row__screenshot img {
-  width: 100%;
-  cursor: zoom-in;
 }
 /* GameImageSplit */
 .game-image-split {
