--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -76,6 +76,13 @@ body {
   border: 1px solid;
   user-select: none;
 }
+/* Large Button */
+.large-button {
+  padding: 0 0.2em;
+  font-size: 2em;
+  border: 2px solid;
+  user-select: none;
+}
 /* Simple Selector */
 .simple-selector {
   margin-right: 0.5em;
@@ -1939,4 +1946,30 @@ body {
 }
 .splash-screen__status-header {
   font-size: 2.5rem;
+}
+
+/* ---- Setup Page ---- */
+.setup-page {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  text-align: center;
+}
+.setup-page__title {
+  font-size: 2.5em;
+  font-weight: bold;
+}
+.setup-page__selection {
+  display: flex;
+  width: 100%;
+  padding: 0 0 0 10px;
+}
+.setup-page__buttons {
+  padding: 1em 0;
+}
+.setup-page__status {
+  font-size: 2.5em;
+}
+.setup-page__wide {
+  width: 100%
 }
