feat: Tag Overhaul
- Tag related DB methods in TagManager
- Tag searches must be exact (case insensitive)
- Tags are now stored in seperate tables

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -250,6 +250,22 @@ body {
   display: inline-block;
   overflow: hidden;
 }
+.tag-input-dropdown__suggestion {
+  display: flex;
+}
+.tag-input-dropdown__content {
+  display: flex;
+  flex-direction: column;
+}
+.tag-icon {
+  margin-right: 0.2em;
+}
+.tag-suggestion-label {
+  width: 100%;
+}
+.tag-label {
+  vertical-align: top;
+}
 /* Log */
 .log {
   height: 100%;
