fix: Tag Suggestions Category color
feat: Game count by tag suggestions

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -266,6 +266,14 @@ body {
 .tag-label {
   vertical-align: top;
 }
+.tag-inner {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.tag-count {
+  text-align: right;
+}
 /* Log */
 .log {
   height: 100%;
