--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -259,11 +259,15 @@ body {
 }
 .tag-icon {
   margin-right: 0.2em;
+  flex: none;
 }
 .tag-suggestion-label {
   width: 100%;
 }
 .tag-label {
+  vertical-align: top;
+}
+.tag-alias-label {
   vertical-align: top;
 }
 .tag-inner {
@@ -1969,4 +1973,122 @@ body {
 }
 .splash-screen__status-header {
   font-size: 2.5rem;
+}
+
+/* Tags Page */
+.tags-page {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+.tags-page__browser {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+/* Tag List Wrapper */
+.tags-list-wrapper {
+  /* --height | Height of list items (in pixels) */
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.tag-browser__center-inner {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.tag-primary {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.tag-alias {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.tag-alias-wrapper {
+  display: flex;
+}
+.tag-list { }
+.tag-list-icon {
+  margin: 0 0.2rem 0 0.2rem;
+  height: 100%;
+}
+/* GameList Item */
+.tag-list-item {
+  display: flex;
+}
+.tag-list-item:hover {
+  cursor: pointer;
+}
+.tag-list-item * {
+  user-select: none;
+}
+.tag-list-item__right {
+  flex: 1;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+.tag-list-item__field {
+  display: inline-block;
+  width: 100%;
+  font-size: calc(0.8 * 1px * var(--height));
+  vertical-align: top;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.tags-browser {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.tags-browser__center {
+  flex: 1 0 auto;
+}
+.tag-alias__buttons {
+  display: flex;
+}
+.tag-alias__buttons * {
+  margin-left: 0.3rem;
+}
+.tag-list-header-column {
+  display: inline-flex;
+  width: 100%;
+}
+.tag-list-header-column__title {
+  flex: 1 1 auto;
+  overflow: hidden;
+  user-select: none;
+  padding-left: 0.2rem;
+}
+.tag-list-header-column__divider {
+  width: 2px;
+  height: auto;
+}
+/* tagList Item & tagList Header Column (Size) */
+.tag-list-header-column--icon {
+  flex: 1 0 auto;
+  width: calc(1px * var(--height));
+}
+.tag-list-header-column--name,
+.tag-list-item__field--name {
+  max-width: 15%;
+}
+.tag-list-header-column--description,
+.tag-list-item__field--description {
+  max-width: 40%;
+}
+.tag-list-header-column--aliases,
+.tag-list-item__field--aliases {
+  max-width: 30%;
+}
+.tag-list-header-column--category,
+.tag-list-item__field--category {
+  max-width: 15%;
 }
