--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -865,3 +865,40 @@ body {
 .tag-count {
   color: var(--layout__secondary-text-color)
 }
+.tag-primary {
+  font-weight: bold;
+}
+.tag-primary__right {
+  font-style: italic;
+  color: var(--layout__secondary-text-color);
+}
+
+.tag-list-item {
+  list-style: none;
+  background-color: var(--layout__primary-background);
+  color: var(--layout__game-item-color);
+}
+.tag-list-item--even {
+  background-color: var(--layout__game-list-item-background-even);
+}
+.tag-list-item:hover {
+  background-color: var(--layout__game-item-background-hover);
+  color: var(--layout__game-item-color-hover);
+}
+.tag-list-item--selected {
+  background-color: var(--layout__game-item-background-selected);
+  color: var(--layout__game-item-color-selected);
+}
+.tag-list-item--selected:hover {
+  background-color: var(--layout__game-item-background-selected-hover);
+  color: var(--layout__game-item-color-selected-hover);
+}
+.tag-alias__buttons-delete:hover .icon__use {
+  fill: var(--layout__warning-bright-color);
+}
+.tag-alias__buttons-delete--active:hover .icon__use {
+  fill: var(--layout__warning-medium-color);
+}
+.tag-alias__buttons-primary:hover .icon__use {
+  fill: var(--layout__confirm-color);
+}
