--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1425,17 +1425,17 @@ body {
 .game-list-item__field--title {
   max-width: 40%;
 }
-.game-list-header-column--tags,
+/* .game-list-header-column--tags,
 .game-list-item__field--tags {
   max-width: 15%;
-}
+} */
 .game-list-header-column--developer,
 .game-list-item__field--developer {
-  max-width: 22.5%;
+  max-width: 30%;
 }
 .game-list-header-column--publisher,
 .game-list-item__field--publisher {
-  max-width: 22.5%;
+  max-width: 30%;
 }
 
 /* GameGrid */
@@ -2057,6 +2057,21 @@ body {
 .tag-alias__buttons * {
   margin-left: 0.3rem;
 }
+.tag-list-header {
+  display: flex;
+  width: 100%;
+}
+.tag-list-header__right {
+  display: flex;
+  width: 100%;
+}
+.tag-list-header__scroll-fill {
+  width: 1rem;
+}
+.tag-list-header-column__divider {
+  width: 2px;
+  height: auto;
+}
 .tag-list-header-column {
   display: inline-flex;
   width: 100%;
@@ -2071,7 +2086,10 @@ body {
   width: 2px;
   height: auto;
 }
-/* tagList Item & tagList Header Column (Size) */
+.tag-list-header-column--icon {
+  flex: 1 0 auto;
+  width: calc(1px * var(--height));
+}
 .tag-list-header-column--icon {
   flex: 1 0 auto;
   width: calc(1px * var(--height));
@@ -2092,7 +2110,16 @@ body {
 .tag-list-item__field--category {
   max-width: 15%;
 }
-.tag-categories__solid-color {
-  margin: 0 0.5rem;
-  height: 2rem;
+.tag-categories__color-preview {
+  text-align: center;
+  height: 2.8rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 2px;
+}
+.tag-category__new-button {
+  position: fixed;
+  bottom: 2rem;
+  right: 0.5rem;
 }
